Bug 1879001 - Remove the popovertarget attribute or set it to an invalid value should clear the explicitly set attr-element. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D201711